--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ header p {
     padding-bottom: 130px;
     margin: 20px auto;
     border-radius: 10px;
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.974) 0%, rgba(61, 166, 110, 0.908) 47%, rgba(251, 203, 145, 0.958) 100%), url("/css/img/web-design-background.jpg");
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.974) 0%, rgba(61, 166, 110, 0.908) 47%, rgba(251, 203, 145, 0.958) 100%), url("../css/img/web-design-background.jpg");
     background-size: cover;
     box-shadow: 0px 10px 60px 5px rgba(3, 39, 47, 0.2);
 }
@@ -245,31 +245,31 @@ header p {
 }
 
 .card3 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels3.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels3.jpg);
 }
 
 .card4 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels4.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels4.jpg);
 }
 
 .card5 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels5.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels5.jpg);
 }
 
 .card6 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels6.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels6.jpg);
 }
 
 .card7 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels7.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels7.jpg);
 }
 
 .card8 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels8.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels8.jpg);
 }
 
 .card9 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels9.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels9.jpg);
 }
 
 footer {
