--- a/css/style.css
+++ b/css/style.css
@@ -237,11 +237,11 @@ header p {
 }
 
 .card1 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels1.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels1.jpg);
 }
 
 .card2 {
-    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(/css/img/pexels2.jpg);
+    background-image: linear-gradient(205deg, rgba(52, 166, 192, 0.874) 0%, rgba(61, 166, 110, 0.108) 47%, rgba(251, 203, 145, 0.858) 100%), url(../css/img/pexels2.jpg);
 }
 
 .card3 {
