--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h2 {
     text-align: center;
 }
 
+
 /* ---- section header ---- */
 
 header {
@@ -85,6 +86,7 @@ header p {
 .hero-heading {
     display: flex;
     flex-direction: row;
+    justify-content: left;
     align-items: baseline;
 }
 
@@ -92,11 +94,14 @@ header p {
     font-size: 4rem;
     font-weight: 700;
     line-height: 3rem;
+
 }
 
-.hero-span {
+.hero-text h5 {
     font-size: 1.6rem;
-    color: rgb(45, 45, 45);
+    font-weight: 500;
+    color: #fff;
+    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.409);
 }
 
 .hero-text p {
@@ -276,12 +281,11 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    justify-content: center;
+    justify-content: space-between;
     background-color: rgb(42, 42, 42);
     padding: 9px 25px;
     color: #fff;
-    padding: 20px;
+    padding: 15px;
     margin-top: 20px;
 }
 
@@ -298,6 +302,9 @@ footer {
 
 footer p {
     margin: 0;
+    color: rgb(213, 213, 213);
+    font-size: 0.8rem;
+    margin-top: 15px;
 }
 
 
