--- a/css/style.css
+++ b/css/style.css
@@ -228,17 +228,19 @@ header p {
     box-shadow: 0px 10px 20px 2px rgba(3, 39, 47, 0.250);
 }
 
-.acard p {
-    color: rgb(71, 71, 71);
-    margin-bottom: 5px;
-}
 
 .acard h4 {
     color: rgb(40, 40, 40);
-    background-color: rgba(255, 255, 255, 0.180);
+    text-shadow: rgba(255, 255, 255, 0.400) 2px 1px 3px, rgba(255, 255, 255) 1px 1px 15px;
     padding: 2px 2px;
     border-radius: 7px;
     font-weight: 700;
+}
+
+.acard p {
+    color: rgb(71, 71, 71);
+    margin-bottom: 5px;
+    text-shadow: rgb(255, 255, 255) 1px 1px 2px;
 }
 
 .card1 {
