--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     font-weight: 400;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .all-content {
     max-width: 1900px;
     margin: 0 auto;
@@ -136,6 +140,8 @@ header p {
     border-radius: 10px;
     box-shadow: 0px 10px 60px 5px rgba(3, 39, 47, 0.2);
     max-width: 1130px;
+    scroll-margin-block-start: 110px;
+    z-index: 1;
 }
 
 .hero-form {
@@ -164,7 +170,6 @@ header p {
     border-radius: 5px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.150);
     background-color: rgb(252, 257, 254);
-
 }
 
 .form-btn button {
@@ -180,13 +185,34 @@ header p {
     font-weight: 500;
     font-size: 1.5rem;
     transition: 175ms ease-out;
-
 }
 
 .form-btn button:hover {
     position: relative;
     top: 1px;
     box-shadow: 0px 1px 10px 5px rgb(173, 227, 198, 0.500);
+}
+
+.form-btn button::after {
+    content: '24 hr Guaranteed!';
+    position: absolute;
+    top: 0;
+    left: 20%;
+    background-color: #fff;
+    color: black;
+    border-radius: 10px;
+    padding: 5px 15px;
+    font-weight: 500;
+    font-size: 1rem;
+    opacity: 0;
+    transition: 300ms ease-out;
+    box-shadow: 0px 3px 10px 5px rgb(173, 227, 198, 0.200);
+    z-index: -1;
+}
+
+.form-btn button:hover::after {
+    opacity: 100%;
+    top: -60%;
 }
 
 .contact-p {
@@ -199,6 +225,7 @@ header p {
 
 #section-my-work {
     margin-top: -50px;
+    scroll-margin-block-start: 110px;
 }
 
 #section-my-work h2 {
@@ -229,13 +256,13 @@ header p {
     height: 350px;
     box-shadow: 0px 10px 60px 5px rgba(3, 39, 47, 0.250);
     padding: 15px;
-    transition: 150ms ease-in-out;
+    transition: 300ms ease-in-out;
 }
 
 .acard:hover {
     position: relative;
-    bottom: 5px;
-    box-shadow: 0px 10px 20px 2px rgba(3, 39, 47, 0.250);
+    bottom: 3px;
+    box-shadow: 0px 10px 15px 2px rgba(3, 39, 47, 0.250);
 }
 
 
@@ -328,9 +355,9 @@ footer p {
 
 @media screen and (max-width: 1200px) {
 
-    /* body {
+    body {
         background-color: blue;
-    } */
+    }
 
     /* ---- section - hero ---- */
 
@@ -345,9 +372,9 @@ footer p {
 
 @media screen and (max-width: 1000px) {
 
-    /* body {
+    body {
         background-color: green;
-    } */
+    }
 
     /* ---- section - hero ---- */
 
@@ -376,15 +403,18 @@ footer p {
         flex-direction: column;
     }
 
+    .form-btn button:hover::after {
+        opacity: 0;
+    }
 }
 
 
 /* ---- mobile device ---- */
 @media screen and (max-width: 650px) {
 
-    /* body {
+    body {
         background-color: red;
-    } */
+    }
 
     /* ---- section header ---- */
 
@@ -451,4 +481,8 @@ footer p {
         margin: 5px 8px;
         font-size: 2rem;
     }
+}
+
+#section-about-me {
+    scroll-margin-block-start: 110px;
 }
