--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ header p {
 
 .hero-img img {
     max-height: 350px;
-    border-radius: 60px;
+    border-radius: 30px;
     margin-bottom: 10px;
     box-shadow: 0px 5px 60px 10px rgba(245, 253, 255, 0.600);
 }
@@ -175,6 +175,12 @@ header p {
     gap: 20px;
     padding: 10px;
 }
+
+/* label::after {
+    display: none;
+    content: ' *';
+    color: rgba(61, 166, 110);
+} */
 
 .hero-form input {
     padding: 4px;
