--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ header p {
     color: rgb(209, 214, 219);
 }
 
+.welcome {
+    color: rgb(157, 228, 190);
+}
+
 .nav-bar {
     display: flex;
     align-items: center;
@@ -270,11 +274,10 @@ header p {
     height: 350px;
     box-shadow: 0px 10px 60px 5px rgba(3, 39, 47, 0.250);
     padding: 15px;
-    transition: 300ms ease-in-out;
+    transition: 200ms ease-out;
 }
 
 .acard:hover {
-    position: relative;
     bottom: 3px;
     box-shadow: 0px 10px 15px 2px rgba(3, 39, 47, 0.250);
 }
@@ -465,6 +468,7 @@ footer p {
 
     .nav-link {
         color: rgb(157, 228, 190);
+        margin-top: 5px;
         font-weight: 500;
     }
 
