--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
 }
 
 html {
@@ -36,6 +35,10 @@ h6 {
     color: rgb(71, 71, 71);
     margin-bottom: 5px;
     font-weight: 400;
+}
+
+p {
+    margin: 0;
 }
 
 
@@ -182,12 +185,6 @@ header p {
     gap: 20px;
     padding: 10px;
 }
-
-/* label::after {
-    display: none;
-    content: ' *';
-    color: rgba(61, 166, 110);
-} */
 
 .hero-form input {
     padding: 4px;
@@ -387,6 +384,22 @@ footer p {
     color: rgb(213, 213, 213);
     font-size: 0.8rem;
     margin-top: 15px;
+}
+
+
+/* ---- hiden ---- */
+
+#tool-tip {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    text-align: center;
+    padding: 5px 10px;
+    background-color: #fff;
+    font-weight: 500;
+    border-radius: 6px;
+    box-shadow: 0px 1px 10px 5px rgba(255, 255, 255, 0.2);
 }
 
 
