--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,7 @@ header p {
     display: inline-block;
     padding: 5px;
     width: 10%;
+    min-width: 47px;
     margin: 0;
     text-align: center;
     background-color: var(--def-text-color);
