--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,7 @@ header p {
     padding: 7px;
     color: #fff;
     z-index: 2;
+    cursor: default;
 
 }
 
@@ -411,6 +412,7 @@ header p {
     color: #fff;
     border-radius: 0 5px 5px 0;
     z-index: 2;
+    cursor: default;
 }
 
 footer {
@@ -457,6 +459,7 @@ footer p {
     font-weight: 500;
     border-radius: 6px;
     box-shadow: 0px 1px 10px 5px rgba(255, 255, 255, 0.2);
+    z-index: 5;
 }
 
 
